# data_mining

./: .gitignore  PIPELINE_DOCS.md  pyproject.toml  requirements.txt
DWDM1/: Lecture_3.ppt  Lecture_4.ppt  Lecture_5.ppt  Lecture_6.ppt  lecture1&2.ppt  lecture_7&8.ppt
DWDM2/: lecture11.ppt  lecture12&13.ppt  lecture_10.ppt  lecture_14&15.ppt
data/: results_scratch.pkl  results_sklearn.pkl
docs/: CHARTS_GUIDE.md  GUIDE.md  learn_decision_tree.md
docs/notebooks/: NB01_EDA.md  NB02_Transformation.md  NB03_FromScratch.md  NB04_Sklearn.md  NB05_Evaluation.md  NB06_Knowledge.md
jupyter/: 01_eda.ipynb  02_from_scratch.ipynb  03_sklearn.ipynb  04_comparison.ipynb
jupyter/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
jupyter/data/: results_scratch.pkl  results_sklearn.pkl
notebooks/: 01_eda.ipynb  02_from_scratch.ipynb  02_transformation.ipynb  03_from_scratch.ipynb  03_sklearn.ipynb  04_comparison.ipynb  04_sklearn.ipynb  05_evaluation.ipynb  06_knowledge.ipynb
notebooks/archive/: 01_eda.ipynb  03_sklearn.ipynb
src/: __init__.py  criteria.py  metrics.py  node.py  splitter.py  tree.py  visualizer.py
